--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/speech": "^6.7.0",
+    "assemblyai": "^4.8.0",
+    "axios": "^1.7.9",
+    "next": "15.1.3",
+    "openai": "^4.77.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-dropzone": "^14.3.5"
   },
   "devDependencies": {
     "typescript": "^5",
