--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@google-cloud/speech": "^6.7.0",
+    "antd": "^5.22.7",
     "assemblyai": "^4.8.0",
     "axios": "^1.7.9",
     "next": "15.1.3",
