--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/speech": "^6.7.0",
     "antd": "^5.22.7",
     "assemblyai": "^4.8.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "next": "15.1.3",
     "openai": "^4.77.0",
