--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@aws-sdk/client-cognito-identity-provider": "^3.750.0",
     "@google-cloud/speech": "^6.7.0",
     "@types/swagger-ui-react": "^5.18.0",
     "antd": "^5.22.7",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "openai": "^4.77.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
